# wasm-scripting-example

./: .gitignore  .gitmodules  Cargo.toml  build_app.sh  build_guest.sh  recipes.json
guest/: Cargo.toml
guest/src/: lib.rs
guest/wit/: main.wit
public/: index.html  styles.css
scripting-tests/: Cargo.toml  build_test_components.sh  core_guest.wast
scripting-tests/single_component/: Cargo.toml
scripting-tests/single_component/src/: lib.rs
scripting-tests/src/: lib.rs
scripting-tests/tests/: core_module.rs  single_component.rs
src/: lib.rs  main.rs
tests/: single_component.rs
tests/single_component/: build.sh
tests/single_component/src/: lib.rs
