[package]
name = "scripting-tests"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
wasm-bindgen = "0.2"
anyhow = "1.0"
tracing-error = "0.2"
wasm-bindgen-test = "0.3"
wasm_component_layer = { path = "../wasm_component_layer" }

color-eyre = "0.6"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm_runtime_layer = { path = "../wasm_runtime_layer", features = ["backend_web"] }
tracing-web = "0.1"
console_error_panic_hook = "0.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wasm_runtime_layer = { path = "../wasm_runtime_layer", features = ["backend_wasmi", "backend_wasmtime"] }
wasmi = "0.31"
wasmtime = { version = ">=0.0.0", features = ["component-model"] }
tracing-tree = "0.3"
